Bug 1452374 - Remove ServiceWorkerRegistrar retry mechanism to fix intermittent shutdown failures. r=baku